# tradebot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Docker/: binance-cli.sh  dogebot.sh  initial-fragments.sh
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py
configs/: prodbot-test-02.json  prodbot-test.json  productionbot-60kdoge.json  productionbot-62kdoge.json  productionbot_02-70kdoge.json
doc/: design.md
json-payloads/: cancel-order.json  place-order.json
python/: README.md  dbaccess.py  gsheet.py  refresh-script.sh  requirements.txt  updatesheet.py
python/docker/: jobbercommand.sh  jobfile  updatesheet.sh
pythonserver/: Dockerfile  DockerfileJobber  README.md  authorize.py  jobberprinter.py  updatesheet.py
src/: CMakeLists.txt
src/apps/binance-cli/: CMakeLists.txt  main.cpp
src/apps/dogebot/: CMakeLists.txt  EventLoop.cpp  EventLoop.h  NaiveBot.h  ProductionBot.cpp  ProductionBot.h  main.cpp
src/apps/initial-fragments/: CMakeLists.txt  main.cpp
src/apps/placeorder/: CMakeLists.txt  main.cpp
src/apps/tests/: Binance_tests.cpp  CMakeLists.txt  Cryptography_tests.cpp  Database_tests.cpp  Decimal_tests.cpp  Exchange_tests.cpp  Order_tests.cpp  Spawn_tests.cpp  Spreaders_tests.cpp  Sqliteorm_tests.cpp  StableDownSpread_tests.cpp  Tradebot_tests.cpp  Trader_tests.cpp  Utilities.h  Websocket_tests.cpp  main.cpp  testnet_secrets.h.in
src/apps/tradelist/: CMakeLists.txt  main.cpp
src/libs/binance/binance/: Api.cpp  Api.h  CMakeFinds.cmake.in  CMakeLists.txt  Cryptography.h  Decimal.h  DecimalLog.h  Json.h  Orders.h  README.md  SampleResponses.md  Time.h
src/libs/binance/binance/detail/: OrdersHelpers.h
src/libs/binanceapi/binanceapi/: Api.cpp  Api.h  CMakeFinds.cmake.in  CMakeLists.txt  Cryptography.cpp  README.md
src/libs/storage/storage/: CMakeFinds.cmake.in  CMakeLists.txt  Sqlite.cpp  Sqlite.h
src/libs/tradebot/tradebot/: CMakeFinds.cmake.in  CMakeLists.txt  Database.cpp  Database.h  Exchange.cpp  Exchange.h  Fragment.cpp  Fragment.h  Fulfillment.cpp  Fulfillment.h  Logging.h  Order.cpp  Order.h  OrmAdaptors-impl.h  OrmDecimalAdaptor-impl.h  Spawner.h  Stream.cpp  Stream.h  SymbolFilters.h  Trader.cpp  Trader.h
src/libs/tradebot/tradebot/spawners/: Helpers.h  NaiveDownSpread.cpp  NaiveDownSpread.h  StableDownSpread.h
src/libs/tradebot/tradebot/stats/: Balance.h  LaunchCount.h
src/libs/trademath/trademath/: CMakeFinds.cmake.in  CMakeLists.txt  Decimal.h  DecimalLog.h  FilterUtilities.h  Function.h  Interval.cpp  Interval.h  Ladder.cpp  Ladder.h  Spawn.h  Spawner.h  Spreaders.h
src/libs/websocket/websocket/: CMakeFinds.cmake.in  CMakeLists.txt  WebSocket.cpp  WebSocket.h
